--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,18 +31,16 @@ requires-python = ">=3.9"
 dependencies = [
     "numpy>=1.20.0",
     "warp-lang>=0.10.0",
+    "torch>=2.0.0",
 ]
 
 [project.optional-dependencies]
-torch = [
-    "torch",
-]
 dev = [
     "pytest>=6.0",
     "numba>=0.50.0",
 ]
 all = [
-    "torch-obb[torch,dev]",
+    "torch-obb[dev]",
 ]
 
 [tool.setuptools]
