--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "torch-obb"
 dynamic = ["version"]
-description = "PyTorch package for oriented bounding box intersection operations"
+description = "PyTorch package for oriented bounding box estimation and intersection operations"
 readme = "README.md"
 license = "MIT"
 authors = [
@@ -14,7 +14,7 @@ authors = [
 maintainers = [
     {name = "torch-obb contributors"},
 ]
-keywords = ["pytorch", "bounding-box", "intersection", "obb", "oriented", "cuda", "warp"]
+keywords = ["pytorch", "bounding-box", "intersection", "obb", "oriented", "cuda", "warp-lang"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
@@ -30,17 +30,13 @@ classifiers = [
 requires-python = ">=3.9"
 dependencies = [
     "numpy>=1.20.0",
-    "warp-lang>=0.10.0",
+    "warp-lang>=1.10.0",
     "torch>=2.0.0",
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=6.0",
-    "numba>=0.50.0",
-]
-all = [
-    "torch-obb[dev]",
 ]
 
 [tool.setuptools]
